Scrollbar Fix

--- a/assets/css/main.pcss
+++ b/assets/css/main.pcss
@@ -51,7 +51,7 @@
 }
 
 .body {
-  @apply bg-[length:140%_140%] bg-gradient-to-tr from-slate-950 via-slate-950 to-cyan-950 text-[var(--text)];
+  @apply bg-[length:140%_140%] bg-gradient-to-tr from-slate-950 via-slate-950 to-cyan-950 text-[var(--text)] overflow-x-auto overflow-y-hidden;
   font-family: "Gemsbuck";
 }
 
